[package]
name = "large_table"
version = "0.1.0"
authors = ["William Speirs <bill.speirs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
csv-core = "0.1"
chrono = "0.4"
dtparse = "1.0"
log = "0.4"
memmap = "0.7"
rayon = "1.3"
ordered-float = "1.0"

[dev-dependencies]
rand = "0.7"
simple_logger = "0.5"
criterion = "0.3"

[[bench]]
name = "value_benchmarks"
harness = false
